Action btn vertical align fixed, 2nd lvl action grey fixed

--- a/src/components/reconcile/actions/actions.css
+++ b/src/components/reconcile/actions/actions.css
@@ -68,8 +68,7 @@
     display: block;
     position: relative;
     width: 50px;
-    min-height: 20px;
-    padding: 8px 12px;
+    padding: 10px 12px;
     margin: 10px auto auto auto;
     color: #fff;
     text-align: center;
